# lazyaccount

./: .env  Account.toml  Cargo.toml  README.md  alto-config.json  docker-compose.yaml  execs.json
.github/workflows/: rust.yml
bak/: account_builder.rs  erc4337.rs  execution.rs  main.rs  module_ops.rs
bak/abi/: umsa.json
bak/cli_tools/: cli.rs  mod.rs
src/: account.rs  account_builder.rs  accounts.rs  cli.rs  config.rs  erc4337.rs  erc7579.rs  error.rs  execution.rs  main.rs  main.rs.bak  smart_account.rs  types.rs  utils.rs
src/abi/: bootstrap.json  umsa_factory.json
src/accounts/: mod.rs  nexus.rs  safe.rs  umsa.rs  userop_builder.rs
src/artifacts/: entrypoint.json  safe.json  safe7579Launchpad.json  safeProxy.json  safeProxyFactory.json
src/cli_tools/: cli.rs  setup_config.rs  setup_config_file.rs
