[package]
name = "ShitAccount"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-contract = { version = "0.2" }
url = "2.3"
alloy = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
tokio = { version= "1.38", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
async-trait = "0.1.81"
